// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot dengan keranjang ada isinya 1`] = `
<DocumentFragment>
  <div
    class="cart"
  >
    <h2>
      Cart
    </h2>
    <ul />
    <p>
      Total Harga: $NaN
    </p>
    <button>
      Checkout
    </button>
  </div>
</DocumentFragment>
`;

exports[`snapshot dengan keranjang kosong 1`] = `
<DocumentFragment>
  <div
    class="cart"
  >
    <h2>
      Cart
    </h2>
    <ul />
    <p>
      Total Harga: $0.00
    </p>
    <button>
      Checkout
    </button>
  </div>
</DocumentFragment>
`;
